--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,81 @@
   box-sizing: border-box;
   font-family: 'Fira Sans', sans-serif;
 }
+
+/* Header Styles */
+
+header {
+  padding-top: 31px;
+}
+
+.container {
+  width: 74%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+/* Navbar Styles */
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar .logo h2 {
+  color: rgba(14, 14, 14, 1);
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 38px;
+}
+
+.navbar .sign-in-btn button {
+  border: 1px solid #006a50;
+  border-radius: 8px;
+  padding: 15px 30px;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 22px;
+  color: #006a50;
+  background-color: white;
+  cursor: pointer;
+}
+
+/* Hero Section Styles */
+.hero-section {
+  margin-top: 51px;
+  background-color: rgba(198, 228, 214, 1);
+  padding: 80px 100px 80px 100px;
+  border-radius: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 64px;
+}
+
+.hero-content p {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 29px;
+  color: rgba(14, 14, 14, 0.5);
+  margin-bottom: 16px;
+}
+
+.hero-content h2 {
+  font-size: 40px;
+  font-weight: 700;
+  color: rgba(14, 14, 14, 1);
+  margin-bottom: 24px;
+}
+
+.hero-content button {
+  border: none;
+  border-radius: 8px;
+  background-color: #006a50;
+  color: white;
+  padding: 17px 34px;
+  font-size: 18px;
+  font-weight: 600;
+  text-align: center;
+  cursor: pointer;
+}
