--- a/css/style.css
+++ b/css/style.css
@@ -271,3 +271,30 @@ header {
   font-weight: 600;
   line-height: 19px;
 }
+
+/* Quote Section Styles */
+.qoute-container {
+  padding: 48px 24px 48px 24px;
+  border: 1px solid rgba(14, 14, 14, 0.15);
+  border-radius: 16px;
+  margin-top: 32px;
+  background: url(../assets/quote-bg.png);
+  background-repeat: no-repeat;
+  background-position: top left;
+}
+
+.qoute-container p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: rgba(14, 14, 14, 0.8);
+  margin-bottom: 12px;
+}
+
+.qoute-container h5 {
+  color: rgba(14, 14, 14, 0.8);
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 24px;
+  margin-bottom: 4px;
+}
