--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,7 @@ header {
   background: url(../assets/quote-bg.png);
   background-repeat: no-repeat;
   background-position: top left;
+  margin-bottom: 80px;
 }
 
 .qoute-container p {
@@ -297,4 +298,109 @@ header {
   font-weight: 600;
   line-height: 24px;
   margin-bottom: 4px;
+}
+
+/* Donate Section Styles */
+.donate-section .donate-heading {
+  text-align: center;
+}
+.donate-section .donate-heading h3 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 48px;
+  color: rgba(14, 14, 14, 1);
+  margin-bottom: 24px;
+}
+
+.donate-section .donate-heading p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: rgba(14, 14, 14, 0.7);
+  margin-bottom: 32px;
+}
+
+.donate-section .donate-money {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.donate-money .money1 button {
+  padding: 40px 40px 40px 40px;
+  border: none;
+  border-radius: 16px;
+  cursor: pointer;
+  font-size: 40px;
+  font-weight: 700;
+  color: rgba(14, 14, 14, 0.8);
+  line-height: 48px;
+}
+.donate-money .money2 button {
+  padding: 40px 40px 40px 40px;
+  border: none;
+  border-radius: 16px;
+  cursor: pointer;
+  font-size: 40px;
+  font-weight: 700;
+  background: rgba(198, 228, 214, 1);
+  color: rgba(14, 14, 14, 0.8);
+  line-height: 48px;
+}
+.donate-money .money3 button {
+  padding: 40px 40px 40px 40px;
+  border: none;
+  border-radius: 16px;
+  cursor: pointer;
+  font-size: 40px;
+  font-weight: 700;
+  color: rgba(14, 14, 14, 0.8);
+  line-height: 48px;
+}
+.donate-money .money4 button {
+  padding: 40px 40px 40px 40px;
+  border: none;
+  border-radius: 16px;
+  cursor: pointer;
+  font-size: 40px;
+  font-weight: 700;
+  color: rgba(14, 14, 14, 0.8);
+  line-height: 48px;
+}
+
+.donate-amount {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 24;
+  margin-bottom: 20px;
+}
+
+.donate-amount input {
+  width: 1000px;
+  padding: 16px 24px;
+  border: 1px solid rgba(14, 14, 14, 0.15);
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: rgba(14, 14, 14, 0.7);
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.donate-amount button {
+  padding: 17px 34px 17px 34px;
+  background-color: #006a50;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 19px;
+  cursor: pointer;
+  margin-bottom: 80px;
 }
