--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,7 @@ header {
   margin-bottom: 80px;
 }
 
+/* Newsletter Section Styles */
 .newletter-section {
   padding: 80px 80px;
   border: none;
@@ -475,4 +476,26 @@ header {
   font-weight: 400;
   line-height: 24px;
   color: rgba(14, 14, 14, 0.7);
+}
+
+/* Footer Section Styles */
+.footer-container {
+  background-color: rgb(230, 228, 228);
+  padding: 50px 160px 50px 160px;
+  text-align: center;
+}
+
+.footer-heading h3 {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 38px;
+  text-align: center;
+  margin-bottom: 64px;
+}
+
+.footer-images {
+  display: flex;
+  justify-self: center;
+  align-items: center;
+  gap: 23px;
 }
